@@ -34,6 +34,7 @@ type DiameterAgentCfg struct {
 	SyncedConnReqs    bool
 	ASRTemplate       string
 	RARTemplate       string
+	DisconnectMethod  string
 	Templates         map[string][]*FCTemplate
 	RequestProcessors []*RequestProcessor
 }
@@ -88,6 +89,9 @@ func (da *DiameterAgentCfg) loadFromJsonCfg(jsnCfg *DiameterAgentJsonCfg, separa
 	}
 	if jsnCfg.Rar_template != nil {
 		da.RARTemplate = *jsnCfg.Rar_template
+	}
+	if jsnCfg.Disconnect_method != nil {
+		da.DisconnectMethod = *jsnCfg.Disconnect_method
 	}
 	if jsnCfg.Templates != nil {
 		if da.Templates == nil {
